// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultsRegistry factory can add vault 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 331683,
}
`;

exports[`VaultsRegistry owner can add factory 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 47328,
}
`;

exports[`VaultsRegistry owner can add vault 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 49674,
}
`;

exports[`VaultsRegistry owner can register implementation contract 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 47487,
}
`;

exports[`VaultsRegistry owner can remove factory 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 25491,
}
`;

exports[`VaultsRegistry owner can remove implementation 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 25430,
}
`;
